ajustes de diseno y funcionalidad

--- a/index.html
+++ b/index.html
@@ -10,20 +10,15 @@
 </head>
 <body>
     <main>
-        <div class="convertidor-container">
-            <div class="card" data-aos="zoom-in"  data-aos-duration="2500">
-
-                <h1>Calculadora de <br>Factoriales</h1>
-
-                <div class="card-conversiones">
-                    <input type="text" id="dataFrom" placeholder="Ingrese un número entero">
-                    <button onclick="calcular()">Calcular</button>
-                    <button onclick="limpiar()">Limpiar</button>
-                    <div>
-                        <p id="showFactorial"> </p>
-                    </div>
+        <div class="slayer">
+            <h1>Funciones Matemáticas</h1>
+            <div class="convertidor-container">
+                <div class="convertirTemperaturas card" data-aos="zoom-in" data-aos-duration="2000">
+                    <a href="../retoLDP1_conversionTemperaturas/index.html" target="_blank"><h2>Convertidor Temperaturas</h2></a>
                 </div>
-                
+                <div class="Factoriales card" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
+                    <a href="./factoriales.html" target="_blank"><h2>Calculadora de Factoriales</h2></a>
+                </div>
             </div>
         </div>
     </main>
